Docker/orders/K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: microservices
  labels:
    app: orders
    tier: backend
spec:
  selector:
    app: orders
  ports:
  - port: 8083
    targetPort: 8083
    name: http
  type: ClusterIP
